dist/1.0/bin/sample/retrieveUnpackaged/objects/Request_Snapshot_SalesFunnel__c.object
<CustomObject>
    <description>Snapshot for Request SalesFunnel Report</description>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Category__c</fullName>
        <label>Opportunity Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Amount__c</fullName>
        <label>Difference in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_No__c</fullName>
        <label>Request No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <label>Running User</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Date, when snapshot was craeted</description>
        <inlineHelpText>Date, when snapshot was craeted</inlineHelpText>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Request Snapshot SalesFunnel</label>
    <nameField>
        <label>Request Snapshot SalesFunnel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Snapshots SalesFunnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>